# sme-kt-zh-collaboration-rag

./: .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/notebooks/: feature0_baseline_rag.ipynb  feature1_evaluation.ipynb
backend/src/sme_kt_zh_collaboration_rag/: baseline_rag.py  baseline_rag_sdsc_qwen.py  feature0_baseline_rag.py
conversational-toolkit/: README.md  pyproject.toml  requirements.txt
conversational-toolkit/src/conversational_toolkit/agents/: base.py  rag.py  router.py  tool_agent.py
conversational-toolkit/src/conversational_toolkit/api/: server.py
conversational-toolkit/src/conversational_toolkit/chunking/: base.py  pdf_chunker.py
conversational-toolkit/src/conversational_toolkit/conversation_database/: controller.py
conversational-toolkit/src/conversational_toolkit/embeddings/: base.py  openai.py  sentence_transformer.py
conversational-toolkit/src/conversational_toolkit/llms/: base.py  local_llm.py  ollama.py  openai.py
conversational-toolkit/src/conversational_toolkit/retriever/: base.py  bm25_retriever.py  hybrid_retriever.py  reranking_retriever.py  vectorstore_retriever.py
conversational-toolkit/src/conversational_toolkit/tools/: base.py
conversational-toolkit/src/conversational_toolkit/utils/: metadata_provider.py  retriever.py
conversational-toolkit/src/conversational_toolkit/vectorstores/: base.py  chromadb.py  postgres.py
init.d/: 01-install-ollama.sh
tests/: test_version.py
(+12 files in other folders)
