[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sme_kt_zh_collaboration_rag"
authors = [
    # TODO configure authors
    # { name = "Jane Smith", email = "jane.smith@example.com" },
    # { name = "John Doe", email = "john.doe@example.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # TODO configure install dependencies
    # "numpy~=2.0",
    # "pandas~=2.0",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "sme_kt_zh_collaboration_rag.__version__"}

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
